k8s/00-namespace-configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-iot
  labels:
    app.kubernetes.io/name: home-iot
    app.kubernetes.io/part-of: home-iot-system
