k8s/22-publisher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-publisher
  namespace: home-iot
  labels:
    app: home-publisher
    app.kubernetes.io/name: home-publisher
    app.kubernetes.io/part-of: home-iot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-publisher
  template:
    metadata:
      labels:
        app: home-publisher
        app.kubernetes.io/name: home-publisher
        app.kubernetes.io/part-of: home-iot
    spec:
      containers:
      - name: publisher
        image: home-publisher:0.1.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
